ingress-jwt-RequestAuthentication.yaml
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: ingress-jwt
  namespace: istio-system
spec:
  selector:
    matchLabels:
      istio: ingressgateway
  jwtRules:
  - issuer: "http://keycloak.127.0.0.1.nip.io:8080/realms/petstore"
    jwksUri: "http://keycloak.keycloak:8080/realms/petstore/protocol/openid-connect/certs"
